Fixed horizontal scrolling bug in stylesheet.

--- a/drupal/themes/ecenter/css/style.css.less
+++ b/drupal/themes/ecenter/css/style.css.less
@@ -345,9 +345,10 @@ a {
         cursor: default; 
       }
     }
-
+    .menu {
+      margin-left: @container_padding_horizontal;
+    }
     &.menu-level-1 {
-      padding-left: @container_padding_horizontal;
       padding-top: 4px;
       padding-bottom: 4px;
       border-bottom: 1px solid @color_grey_60;
